update init report items on plugins, refactoring and fixing plugins, update show job report list